Add Postgres connection

--- a/mopal/app/model/src/main/resources/app.properties
+++ b/mopal/app/model/src/main/resources/app.properties
@@ -1,10 +1,16 @@
-#POSTGRES
-database.type=POSTGRES
-database.jdbcDriver=org.postgresql.Driver
+#Databese Configuration
 database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal
-database.jdbcUser=postgres
-database.jdbcPassword=root
-database.jdbcSystemUrl=jdbc:postgresql://localhost:5432/mopal
+database.hostname=localhost
+database.adminUrl=jdbc:postgresql://localhost:5432/mopal
+database.type=POSTGRES
+database.port=5432
+database.driverClass=org.postgresql.Driver
+database.user=postgres
+database.password=root
 database.systemUser=postgres
 database.systemPassword=root
+database.schemaPrefix=MOPAL_
+database.enforceVersion=true
 database.autoUpgrade=true
+database.initDB=false
+database.resetDB=false
