--- a/mopal/app/build.gradle
+++ b/mopal/app/build.gradle
@@ -4,7 +4,7 @@ description = "Mopal Application"
 
 group = "com.mopal"
 version "${buildVersion}.${buildNumber}-${buildBranch}"
-ext.artifactName = "view"
+ext.artifactName = "app"
 
 distributions {
     application {
@@ -14,11 +14,11 @@ distributions {
     }
     metamodels {
         baseName = "${artifactName}-metamodels"
-        projects = [ project(':mopal:app:view'), project(':mopal:app:model'), project(':mopal:app:core') ]
+        projects = [ project(':mopal:app:model'), project(':mopal:app:core'), project(':mopal:app:services'), project(':mopal:app:view') ]
     }
 
     services {
         baseName = "${artifactName}-services"
-        projects = [ project(':mopal:app:services'), project(':mopal:app:view') ]
+        projects = [ project(':mopal:app:services')]
     }
 }
