--- a/mopal/app/core/build.gradle
+++ b/mopal/app/core/build.gradle
@@ -2,9 +2,13 @@ sourceSets.main {
     java.srcDirs = ['src/main/java','src_managed/main/mm']
 }
 
+task rebuild {
+    dependsOn clean, build
+}
+
 def moduleName =  projectDir.parentFile.parentFile.name + "-" + projectDir.parentFile.name + "-" + project.name
 jar.archiveName = moduleName + ".jar"
 
 dependencies {
-    compile project(':mopal:app:core')
-}
+    compile project(':mopal:app:model')
+}	
