Agrego config para seguridad integrada via Apache Shiro

--- a/mopal/app/model/src/main/resources/app.properties
+++ b/mopal/app/model/src/main/resources/app.properties
@@ -14,3 +14,4 @@ database.enforceVersion=true
 database.autoUpgrade=true
 database.initDB=false
 database.resetDB=false
+shiro.builtInAuthentication=true
