Creo la configuracion de desarrollo

--- a/mopal/app/model/src/main/resources/app.properties
+++ b/mopal/app/model/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #Databese Configuration
-database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal
+database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal_dev
 database.hostname=localhost
-database.adminUrl=jdbc:postgresql://localhost:5432/mopal
+database.adminUrl=jdbc:postgresql://localhost:5432/mopal_dev
 database.type=POSTGRES
 database.port=5432
 database.driverClass=org.postgresql.Driver
@@ -9,7 +9,7 @@ database.user=postgres
 database.password=root
 database.systemUser=postgres
 database.systemPassword=root
-database.schemaPrefix=MOPAL_
+database.schemaPrefix=MOPAL_DEV_
 database.enforceVersion=true
 database.autoUpgrade=true
 database.initDB=false
