--- a/mopal/app/model/src/main/resources/app.properties
+++ b/mopal/app/model/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #Databese Configuration
-database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal_dev
+database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal
 database.hostname=localhost
-database.adminUrl=jdbc:postgresql://localhost:5432/mopal_dev
+database.adminUrl=jdbc:postgresql://localhost:5432/mopal
 database.type=POSTGRES
 database.port=5432
 database.driverClass=org.postgresql.Driver
@@ -9,9 +9,10 @@ database.user=postgres
 database.password=root
 database.systemUser=postgres
 database.systemPassword=root
-database.schemaPrefix=MOPAL_DEV_
+database.schemaPrefix=MOPAL_
 database.enforceVersion=true
 database.autoUpgrade=true
 database.initDB=false
 database.resetDB=false
 shiro.builtInAuthentication=true
+index.port = 8200
