--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2048m
 org.gradle.configureondemand=true
 buildVersion=1.00
-suigenerisVersion=3.2.14111-release
+suigenerisVersion=3.3.14270-master
