--- a/mopal/app/model/src/main/resources/app.properties
+++ b/mopal/app/model/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #Databese Configuration
-database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal
+database.jdbcUrl=jdbc:postgresql://localhost:5432/mopal-prod
 database.hostname=localhost
-database.adminUrl=jdbc:postgresql://localhost:5432/mopal
+database.adminUrl=jdbc:postgresql://localhost:5432/mopal-prod
 database.type=POSTGRES
 database.port=5432
 database.driverClass=org.postgresql.Driver
